Closed Bug 638982 Opened 14 years ago Closed 14 years ago

TI: Missing type at #2:00006 pushed 0: XML:prototype:new

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

(Whiteboard: fixed-in-jaegermonkey)

$ ./js -n -a js> XML.prototype.x [infer failure] Missing type at #2:00006 pushed 0: XML:prototype:new
Erk, properties of new XML objects were being marked as unknown, but not those of XML.prototype itself. http://hg.mozilla.org/projects/jaegermonkey/rev/94bb76759427
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.