[INFER] Mark properties of XML.prototype as unknown, bug 638982.